Get out prova social facebook

--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
     <!-- Header Area wrapper End -->
 
     <!-- Prova Social -->
-    <div class="container" style="background-color: #f6f7f9;">
+    <!-- <div class="container" style="background-color: #f6f7f9;">
       <span class="titulo_comentario" style="font-weight: bolder;">25 comentários</span>
-      <hr>
+      <hr> -->
       <!-- 1 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/imag5.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -123,9 +123,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 3 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
       <!-- 2 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image2.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -134,9 +134,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 4 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
       <!-- 3 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image1.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -145,9 +145,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 5 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
       <!-- 4 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image7.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -156,9 +156,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 12 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
       <!-- 5 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image21.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -167,9 +167,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 19 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
       <!-- 6 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image20.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -178,9 +178,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 24 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
       <!-- 7 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image3.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -189,9 +189,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 26 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
       <!-- 8 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image17.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -200,9 +200,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 31 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
        <!-- 9 comment -->
-       <div class="col-lg-2"></div>
+       <!-- <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
           <img src="./assets/img/coments/image18.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -211,9 +211,9 @@
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 55 min</span>
          </div>
        </div>
-       <div class="col-lg-2"></div>
+       <div class="col-lg-2"></div> -->
         <!-- 10 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image16.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -222,9 +222,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 58 min</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
        <!-- 11 comment -->
-       <div class="col-lg-2"></div>
+       <!-- <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
           <img src="./assets/img/coments/image19.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -233,9 +233,9 @@
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
          </div>
        </div>
-       <div class="col-lg-2"></div>
+       <div class="col-lg-2"></div> -->
         <!-- 12 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image8.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -244,9 +244,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
        <!-- 13 comment -->
-       <div class="col-lg-2"></div>
+       <!-- <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
           <img src="./assets/img/coments/image4.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -255,9 +255,9 @@
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
          </div>
        </div>
-       <div class="col-lg-2"></div>
+       <div class="col-lg-2"></div> -->
         <!-- 14 comment -->
-      <div class="col-lg-2"></div>
+      <!-- <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
           <img src="./assets/img/coments/image15.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -266,9 +266,9 @@
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div> -->
        <!-- 15 comment -->
-       <div class="col-lg-2"></div>
+       <!-- <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
           <img src="./assets/img/coments/image12.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -277,9 +277,9 @@
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
          </div>
        </div>
-       <div class="col-lg-2"></div>
+       <div class="col-lg-2"></div> -->
        <!-- 16 comment -->
-       <div class="col-lg-2"></div>
+       <!-- <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
           <img src="./assets/img/coments/image11.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -288,9 +288,9 @@
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
          </div>
        </div>
-       <div class="col-lg-2"></div>
+       <div class="col-lg-2"></div> -->
        <!-- 17 comment -->
-       <div class="col-lg-2"></div>
+       <!-- <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
           <img src="./assets/img/coments/image9.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -299,9 +299,9 @@
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
          </div>
        </div>
-       <div class="col-lg-2"></div>
+       <div class="col-lg-2"></div> -->
        <!-- 18 comment -->
-       <div class="col-lg-2"></div>
+       <!-- <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
           <img src="./assets/img/coments/image10.jpeg" style="float: left; width: 60px;height: 50px;padding-right: 10px;">
@@ -311,7 +311,7 @@
          </div>
        </div>
        <div class="col-lg-2"></div>
-    </div>
+    </div> -->
     
     <!-- End Prova Social -->
 
