Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-xs-12">
-            <img src="./assets/img/combo2.png" style="width: 90%;">
+            <img src="./assets/img/combo2.jpf" style="width: 90%;">
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 active">
             <div class="table wow" id="active-tb" data-wow-delay="1.2s">
@@ -401,7 +401,7 @@
           <div class="col-lg-4 col-md-3 col-xs-12">
             <div class="footer-logo">
               <img src="assets/img/logoNavBar.png" alt="" style="width: 50%; height: 50%;">   
-              <p style="color: white;">Copyright 2021 - Aquiles Media® Todos os direitos.</p>  
+              <p style="color: white;">Copyright 2019 - Aquiles Media® Todos os direitos.</p>  
               <p>ESTE SITE NÃO É do FACEBOOK: Este site não faz parte do site do Facebook ou do Facebook Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da FACEBOOK, Inc. A Aquiles Media é uma empresa com o objetivo de ajudar pessoas a obterem resultados financeiros utilizando o poder da informação e conhecimento. Os depoimentos mostrados são negócios e vão variar com base no seu esforço, no conhecimento que você adquirir.</p>
             </div>
           </div>
