--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-xs-12">
-            <img src="./assets/img/combo2.jpf" style="width: 90%;">
+            <img src="./assets/img/combo2.jpg" style="width: 90%;">
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 active">
             <div class="table wow" id="active-tb" data-wow-delay="1.2s">
