--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-3 col-xs-12">
             <div class="footer-logo">
-              <img src="assets/img/logoNavBar.png" alt="" style="width: 50%; height: 50%;">   
+              <img src="assets/img/logoNavBar.jpg" alt="" style="width: 50%; height: 50%;">   
               <p style="color: white;">Copyright 2019 - Aquiles Media® Todos os direitos.</p>  
               <p>ESTE SITE NÃO É do FACEBOOK: Este site não faz parte do site do Facebook ou do Facebook Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da FACEBOOK, Inc. A Aquiles Media é uma empresa com o objetivo de ajudar pessoas a obterem resultados financeiros utilizando o poder da informação e conhecimento. Os depoimentos mostrados são negócios e vão variar com base no seu esforço, no conhecimento que você adquirir.</p>
             </div>
