--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <div class="col-lg-4 col-md-5 col-xs-12">
             <p class="float-right">Designed and Developed by Aquiles Media</p>
             <img src="assets/img/loja protegida.png" alt="" style="width: 80%;">
-            <img src="assets/img/bandeiras-cartoes-credito-739px.png" alt="" style="width: 80%;"> 
+            <img src="assets/img/bandeiras-cartoes-credito-739px.jpg" alt="" style="width: 80%;"> 
           </div> 
         </div>
       </div>
