Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
     <!-- Animate -->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <!-- <link rel="stylesheet" href="assets/css/animate.css"> -->
     <!-- Main Style -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- Responsive Style -->
