Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar text" style="background-color: #1b0052; color: white; position: relative;">
         <div class="container text-center" style="padding-top: 2%;">
           <!-- Brand and toggle get grouped for better mobile display -->
-          <a href="index.html" class="navbar-brand"><img src="assets/img/logoNavBar.png" alt="" style="width: 40%; height: 30%; align-items: center; margin-top: 2%;"></a>       
+          <a href="index.html" class="navbar-brand"><img src="assets/img/logoNavBar.webp" alt="" style="width: 40%; height: 30%; align-items: center; margin-top: 2%;"></a>       
           </button>
           
         </div>
@@ -400,7 +400,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-3 col-xs-12">
             <div class="footer-logo">
-              <img src="assets/img/logoNavBar.jpg" alt="" style="width: 50%; height: 50%;">   
+              <img src="assets/img/logoNavBar.webp" alt="" style="width: 50%; height: 50%;">   
               <p style="color: white;">Copyright 2019 - Aquiles Media® Todos os direitos.</p>  
               <p>ESTE SITE NÃO É do FACEBOOK: Este site não faz parte do site do Facebook ou do Facebook Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da FACEBOOK, Inc. A Aquiles Media é uma empresa com o objetivo de ajudar pessoas a obterem resultados financeiros utilizando o poder da informação e conhecimento. Os depoimentos mostrados são negócios e vão variar com base no seu esforço, no conhecimento que você adquirir.</p>
             </div>
@@ -410,7 +410,7 @@
           <div class="col-lg-4 col-md-5 col-xs-12">
             <p class="float-right">Designed and Developed by Aquiles Media</p>
             <img src="assets/img/loja protegida.png" alt="" style="width: 80%;">
-            <img src="assets/img/bandeiras-cartoes-credito-739px.jpg" alt="" style="width: 80%;"> 
+            <img src="assets/img/bandeiras-cartoes-credito-739px.webp" alt="" style="width: 80%;"> 
           </div> 
         </div>
       </div>
