--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 
     <!-- Go to Top Link -->
     <a href="#" class="back-to-top">
-    	<i class="lni-arrow-up">^</i>
+    	<i class="lni-arrow-up" style="color: white;">^</i>
     </a>
     
    
