Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <!-- Icon -->
-    <!-- <link rel="stylesheet" href="assets/fonts/line-icons.css"> -->
+    <link rel="preload" href="assets/fonts/line-icons.css">
     <!-- Slicknav -->
     <link rel="stylesheet" href="assets/css/slicknav.css">
     <!-- Owl carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
     <link rel="stylesheet" href="assets/css/owl.theme.css">
     
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
