--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/slicknav.css">
     <!-- Owl carousel -->
     <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
-    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    <!-- <link rel="stylesheet" href="assets/css/owl.theme.css"> -->
     
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
@@ -428,7 +428,7 @@
     <script src="assets/js/jquery-min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <!-- <script src="assets/js/owl.carousel.min.js"></script> -->
     <script src="assets/js/jquery.mixitup.js"></script>
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/jquery.nav.js"></script>
