--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
     <!-- <link rel="stylesheet" href="assets/css/owl.theme.css"> -->
     
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
     <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
     <!-- Animate -->
     <!-- <link rel="stylesheet" href="assets/css/animate.css"> -->
