--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     <script src="assets/js/scrolling-nav.js"></script>
     <script src="assets/js/jquery.easing.min.js"></script>
     <script src="assets/js/jquery.counterup.min.js"></script>  
-    <script src="assets/js/nivo-lightbox.js"></script>     
+    <!-- <script src="assets/js/nivo-lightbox.js"></script>      -->
     <script src="assets/js/jquery.magnific-popup.min.js"></script>     
     <script src="assets/js/waypoints.min.js"></script>   
     <script src="assets/js/jquery.slicknav.js"></script>
