--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <link rel="stylesheet" href="assets/css/owl.theme.css"> -->
     
     <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
-    <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
+    <!-- <link rel="stylesheet" href="assets/css/nivo-lightbox.css"> -->
     <!-- Animate -->
     <!-- <link rel="stylesheet" href="assets/css/animate.css"> -->
     <!-- Main Style -->
