--- a/index.html
+++ b/index.html
@@ -13,18 +13,10 @@
     <link rel="preload" href="assets/fonts/line-icons.css">
     <!-- Slicknav -->
     <link rel="stylesheet" href="assets/css/slicknav.css">
-    <!-- Owl carousel -->
-    <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/owl.theme.css"> -->
-    
-    <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/nivo-lightbox.css"> -->
-    <!-- Animate -->
-    <!-- <link rel="stylesheet" href="assets/css/animate.css"> -->
     <!-- Main Style -->
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="preload" href="assets/css/main.css">
     <!-- Responsive Style -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="preload" href="assets/css/responsive.css">
 
     <style>
       .btn-zap {
