Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/js/jquery-min.js"></script>
     <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script rel="preload" src="assets/js/bootstrap.min.js"></script>
     <!-- <script src="assets/js/owl.carousel.min.js"></script> -->
     <script src="assets/js/jquery.mixitup.js"></script>
     <script src="assets/js/wow.js"></script>
