--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Score dos Sonhos</title>
 
     <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="assets/css/bootstrap.min.css" > -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <!-- Icon -->
     <link rel="preload" href="assets/fonts/line-icons.css">
     <!-- Slicknav -->
@@ -419,7 +419,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/js/jquery-min.js"></script>
     <script src="assets/js/popper.min.js"></script>
-    <!-- <script rel="preload" src="assets/js/bootstrap.min.js"></script> -->
+    <script rel="preload" src="assets/js/bootstrap.min.js"></script>
     <!-- <script src="assets/js/owl.carousel.min.js"></script> -->
     <script src="assets/js/jquery.mixitup.js"></script>
     <script src="assets/js/wow.js"></script>
