--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     <script src="assets/js/popper.min.js"></script>
     <script rel="preload" src="assets/js/bootstrap.min.js"></script>
     <!-- <script src="assets/js/owl.carousel.min.js"></script> -->
-    <script src="assets/js/jquery.mixitup.js"></script>
+    <!-- <script src="assets/js/jquery.mixitup.js"></script> -->
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/jquery.nav.js"></script>
     <script src="assets/js/scrolling-nav.js"></script>
@@ -430,7 +430,7 @@
     <!-- <script src="assets/js/nivo-lightbox.js"></script>      -->
     <!-- <script src="assets/js/jquery.magnific-popup.min.js"></script>      -->
     <script src="assets/js/waypoints.min.js"></script>   
-    <script src="assets/js/jquery.slicknav.js"></script>
+    <!-- <script src="assets/js/jquery.slicknav.js"></script> -->
     <script src="assets/js/main.js"></script>
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
