Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -315,11 +315,11 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-xs-12">
-            <img src="./assets/img/combo2.webp" style="width: 90%;">
+            <img src="./assets/img/combo2.webp" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook">
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 active">
             <div class="table wow" id="active-tb" data-wow-delay="1.2s">
-              <ul class="description">
+              <div class="description">
                 <p class="text-precos">Ebook Método Score dos Sonhos</p>
                 <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$97,00</span></p>
                 <p class="text-precos">Ebook Bônus 1: Sair do SCPC e renegociar Sem Pagar Juros</p>
@@ -335,7 +335,7 @@
                 <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;">De <span style="color: red; font-size: xx-large; font-weight: bolder;text-decoration: line-through"> R$207,00</span></p>
                 <br>
                 <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;"><span style="color: rgb(50, 150, 0); font-size: xxx-large; font-weight: bolder;"> R$97,00</span></p>
-              </ul>
+              </div>
               <button type="button" class="btn btn-success btn-lg btn-zap"><a href="/" style="text-decoration: none; color: white; animation: clickit 4.5s">SIM, QUERO AUMENTAR MEU SCORE</a></button>
             </div> 
           </div>
