--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@
     <script src="assets/js/scrolling-nav.js"></script>
     <script src="assets/js/jquery.easing.min.js"></script>
     <script src="assets/js/jquery.counterup.min.js"></script>  
-    <!-- <script src="assets/js/nivo-lightbox.js"></script>      -->
-    <!-- <script src="assets/js/jquery.magnific-popup.min.js"></script>      -->
+    <script src="assets/js/nivo-lightbox.js"></script>     
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>     
     <script src="assets/js/waypoints.min.js"></script>   
-    <!-- <script src="assets/js/jquery.slicknav.js"></script> -->
+    <script src="assets/js/jquery.slicknav.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
