Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
 
     <title>Score dos Sonhos</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
-    <!-- Icon -->
-    <link rel="preload" href="assets/fonts/line-icons.css">
-    <!-- Slicknav -->
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <!-- Main Style -->
-    <link rel="preload" href="assets/css/main.css">
-    <!-- Responsive Style -->
-    <link rel="preload" href="assets/css/responsive.css">
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
+     <!-- Icon -->
+     <link rel="stylesheet" href="assets/fonts/line-icons.css">
+     <!-- Slicknav -->
+     <link rel="stylesheet" href="assets/css/slicknav.css">
+     <!-- Owl carousel -->
+     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+     <link rel="stylesheet" href="assets/css/owl.theme.css">
+     
+     <link rel="stylesheet" href="assets/css/magnific-popup.css">
+     <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
+     <!-- Animate -->
+     <link rel="stylesheet" href="assets/css/animate.css">
+     <!-- Main Style -->
+     <link rel="stylesheet" href="assets/css/main.css">
+     <!-- Responsive Style -->
+     <link rel="stylesheet" href="assets/css/responsive.css">
 
     <style>
       .btn-zap {
