--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
     
     <!-- Copyright Section Start -->
-    <div class="copyright">
+    <div class="copyright" style="background-color: black;">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-3 col-xs-12">
