Optimize Google Ads

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <header id="header-wrap">
       <!-- Navbar Start -->
       
-      <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar text" style="background-color: #1b0052; color: white; position: relative;">
+      <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar text" style="background-color: #1b0052; color: white; position: relative; padding-top: 0px;">
         <div class="container text-center" style="padding-top: 2%;">
           <!-- Brand and toggle get grouped for better mobile display -->
           <a href="index.html" class="navbar-brand"><img src="assets/img/logoNavBar.webp" alt="" style="width: 40%; height: 30%; align-items: center; margin-top: 2%;"></a>       
