--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <title>Score dos Sonhos</title>
 
      <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
-     <!-- Icon -->
-     <link rel="stylesheet" href="assets/fonts/line-icons.css">
-     <!-- Slicknav -->
-     <link rel="stylesheet" href="assets/css/slicknav.css">
-     <!-- Owl carousel -->
-     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-     <link rel="stylesheet" href="assets/css/owl.theme.css">
-     
-     <link rel="stylesheet" href="assets/css/magnific-popup.css">
-     <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
-     <!-- Animate -->
-     <link rel="stylesheet" href="assets/css/animate.css">
-     <!-- Main Style -->
-     <link rel="stylesheet" href="assets/css/main.css">
-     <!-- Responsive Style -->
-     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
+    <!-- Icon -->
+    <link rel="stylesheet" href="assets/fonts/line-icons.css">
+    <!-- Slicknav -->
+    <link rel="stylesheet" href="assets/css/slicknav.css">
+    <!-- Owl carousel -->
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
+    <!-- Animate -->
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <!-- Main Style -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <!-- Responsive Style -->
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
     <style>
       .btn-zap {
@@ -427,9 +427,9 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/js/jquery-min.js"></script>
     <script src="assets/js/popper.min.js"></script>
-    <script rel="preload" src="assets/js/bootstrap.min.js"></script>
-    <!-- <script src="assets/js/owl.carousel.min.js"></script> -->
-    <!-- <script src="assets/js/jquery.mixitup.js"></script> -->
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.mixitup.js"></script>
     <script src="assets/js/wow.js"></script>
     <script src="assets/js/jquery.nav.js"></script>
     <script src="assets/js/scrolling-nav.js"></script>
