--- a/index.html
+++ b/index.html
@@ -391,11 +391,24 @@
             <div class="contents text-center">
                 <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Veja o que nossos clientes estão dizendo sobre o <span style="color: rgb(0, 255, 8); text-shadow: 2px 2px black;">Método Score dos Sonhos</span></h2>
                 <!-- IMAGENS WHATSAPP -->
-                
+                <img src="./assets/img/Depoimento-4.jpeg" alt="Depoimento 4 Whatsapp">
+                <img src="./assets/img/Depoimento-5.jpeg" alt="Depoimento 5 Whatsapp">
+                <img src="./assets/img/Depoimento-7.jpeg" alt="Depoimento 7 Whatsapp">
+                <img src="./assets/img/Depoimento-8.jpeg" alt="Depoimento 8 Whatsapp">
+                <img src="./assets/img/Depoiemnto-1.png" alt="Depoimento 1 Whatsapp">
+                <img src="./assets/img/Depoimento-2.png" alt="Depoimento 2 Whatsapp">
+                <img src="./assets/img/Depoimento-9.jpeg" alt="Depoimento 9 Whatsapp">
+
 
                 <p style="color: black;">
                   <a href="politicas.html" style="text-decoration: none;color: rgb(233, 233, 233);"><strong>Política de Privacidade</strong>|</a> 
                   <a href=termos.html style="text-decoration: none; color: rgb(233, 233, 233);"><strong>Termos de Uso</strong></a></p>
+                  
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <img src="./assets/img/compra-segura.png" alt="compra segura" style="width: 100%;">
             </div>
           </div>
         </div>
