--- a/index.html
+++ b/index.html
@@ -391,14 +391,21 @@
             <div class="contents text-center">
                 <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Veja o que nossos clientes estão dizendo sobre o <span style="color: rgb(0, 255, 8); text-shadow: 2px 2px black;">Método Score dos Sonhos</span></h2>
                 <!-- IMAGENS WHATSAPP -->
-                <img src="./assets/img/Depoimento-4.jpeg" alt="Depoimento 4 Whatsapp">
-                <img src="./assets/img/Depoimento-5.jpeg" alt="Depoimento 5 Whatsapp">
-                <img src="./assets/img/Depoimento-7.jpeg" alt="Depoimento 7 Whatsapp">
-                <img src="./assets/img/Depoimento-8.jpeg" alt="Depoimento 8 Whatsapp">
-                <img src="./assets/img/Depoiemnto-1.png" alt="Depoimento 1 Whatsapp">
-                <img src="./assets/img/Depoimento-2.png" alt="Depoimento 2 Whatsapp">
-                <img src="./assets/img/Depoimento-9.jpeg" alt="Depoimento 9 Whatsapp">
-
+                <img src="./assets/img/Depoimento-4.webp" alt="Depoimento 4 Whatsapp">
+                <img src="./assets/img/Depoimento-5.webp" alt="Depoimento 5 Whatsapp">
+                <img src="./assets/img/Depoimento-7.webp" alt="Depoimento 7 Whatsapp">
+                <img src="./assets/img/Depoimento-8.webp" alt="Depoimento 8 Whatsapp">
+                <img src="./assets/img/Depoimento-1.webp" alt="Depoimento 1 Whatsapp">
+                <img src="./assets/img/Depoimento-2.webp" alt="Depoimento 2 Whatsapp">
+                <img src="./assets/img/Depoimento-9.webp" alt="Depoimento 9 Whatsapp">
+                <!-- cwebp -q 50 Depoiemnto-1.png -o  Depoimento-1.webp
+                cwebp -q 50 Depoimento-2.png -o  Depoimento-2.webp
+                cwebp -q 50 Depoimento-4.jpeg -o  Depoimento-4.webp
+                cwebp -q 50 Depoimento-5.jpeg -o  Depoimento-5.webp
+                cwebp -q 50 Depoimento-7.jpeg -o  Depoimento-7.webp
+                cwebp -q 50 Depoimento-8.jpeg -o  Depoimento-8.webp
+                cwebp -q 50 compra-segura.png -o  compra-segura.webp
+               -->
 
                 <p style="color: black;">
                   <a href="politicas.html" style="text-decoration: none;color: rgb(233, 233, 233);"><strong>Política de Privacidade</strong>|</a> 
@@ -408,7 +415,7 @@
           </div>
           <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-              <img src="./assets/img/compra-segura.png" alt="compra segura" style="width: 100%;">
+              <img src="./assets/img/compra-segura.webp" alt="compra segura" style="width: 100%;">
             </div>
           </div>
         </div>
@@ -472,7 +479,7 @@
           </div>
           <div class="col-lg-4 col-md-5 col-xs-12">
             <p class="float-right">Designed and Developed by Aquiles Media</p>
-            <img src="assets/img/loja protegida.png" alt="" style="width: 80%;">
+            <img src="assets/img/loja_protegida.webp" alt="" style="width: 80%;">
             <img src="assets/img/bandeiras-cartoes-credito-739px.webp" alt="" style="width: 80%;"> 
           </div> 
         </div>
