--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <img src="./assets/img/Depoimento-8.webp" alt="Depoimento 8 Whatsapp">
                 <img src="./assets/img/Depoimento-1.webp" alt="Depoimento 1 Whatsapp">
                 <img src="./assets/img/Depoimento-2.webp" alt="Depoimento 2 Whatsapp">
-                <img src="./assets/img/Depoimento-9.webp" alt="Depoimento 9 Whatsapp">
+                <!-- <img src="./assets/img/Depoimento-9.webp" alt="Depoimento 9 Whatsapp"> -->
                 <!-- cwebp -q 50 Depoiemnto-1.png -o  Depoimento-1.webp
                 cwebp -q 50 Depoimento-2.png -o  Depoimento-2.webp
                 cwebp -q 50 Depoimento-4.jpeg -o  Depoimento-4.webp
