--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <!-- Responsive Style -->
     <link rel="stylesheet" href="assets/css/responsive.css">
 
+    <link rel="icon" href="./assets/img/SDSICON.png">
+
     <style>
       .btn-zap {
           height: 6%;
@@ -55,7 +57,7 @@
           font-weight: bolder;
         }
     </style>
-
+    <script src="/assets/js/t202PixelVideoViews.js"></script>
   </head>
   <body>
 
