--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
 
     <!-- Prova social Whatsapp -->
-    <div id="hero-area" class="hero-area-bg" style="background: url(./assets/img/gradient-background.png);  background-repeat: no-repeat; background-size: cover;">
+    <div id="hero-area" class="hero-area-bg" style="background: url(./assets/img/gradient-background.webp);  background-repeat: no-repeat; background-size: cover;">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
