--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             <div class="footer-logo">
               <img src="assets/img/logoNavBar.webp" alt="" style="width: 50%; height: 50%;">   
               <p style="color: white;">Copyright 2019 - Aquiles Media® Todos os direitos Reservados.</p>  
-              <p>ESTE SITE NÃO É do FACEBOOK: Este site não faz parte do site do Facebook ou do Facebook Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da FACEBOOK, Inc. A Aquiles Media é uma empresa com o objetivo de ajudar pessoas a obterem resultados financeiros utilizando o poder da informação e conhecimento. Os depoimentos mostrados são negócios e vão variar com base no seu esforço, no conhecimento que você adquirir.</p>
+              <p style="font-size: 13px;">ESTE SITE NÃO É do FACEBOOK: Este site não faz parte do site do Facebook ou do Facebook Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da FACEBOOK, Inc. A Aquiles Media é uma empresa com o objetivo de ajudar pessoas a obterem resultados financeiros utilizando o poder da informação e conhecimento. Os depoimentos mostrados são negócios e vão variar com base no seu esforço, no conhecimento que você adquirir.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-xs-12"> 
@@ -554,6 +554,10 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
+
+    <script src="lazysizes.min.js" async>
+      
+    </script>
       
   </body>
 </html>
