--- a/index.html
+++ b/index.html
@@ -521,8 +521,8 @@
           </div>
           <div class="col-lg-4 col-md-5 col-xs-12">
             <p class="float-right">Designed and Developed by Aquiles Media</p>
-            <img src="assets/img/loja_protegida.webp" alt="" style="width: 80%;">
-            <img src="assets/img/bandeiras-cartoes-credito-739px.webp" alt="" style="width: 80%;"> 
+            <img src="assets/img/loja_protegida.webp" alt="loja protegida" style="width: 80%;">
+            <img src="assets/img/bandeiras-cartoes-credito-739px.webp" alt="bandeiras de cartoes" style="width: 80%;" class="lazyload"> 
           </div> 
         </div>
       </div>
@@ -556,7 +556,7 @@
     <script src="assets/js/contact-form-script.min.js"></script>
 
     <script src="lazysizes.min.js" async>
-      
+
     </script>
       
   </body>
