--- a/index.html
+++ b/index.html
@@ -377,12 +377,12 @@
             <div class="contents text-center">
                 <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Veja o que nossos clientes estão dizendo sobre o <span style="color: rgb(0, 255, 8); text-shadow: 2px 2px black;">Método Score dos Sonhos</span></h2>
                 <!-- IMAGENS WHATSAPP -->
-                <img src="./assets/img/Depoimento-4.webp" alt="Depoimento 4 Whatsapp">
-                <img src="./assets/img/Depoimento-5.webp" alt="Depoimento 5 Whatsapp">
-                <img src="./assets/img/Depoimento-7.webp" alt="Depoimento 7 Whatsapp">
-                <img src="./assets/img/Depoimento-8.webp" alt="Depoimento 8 Whatsapp">
-                <img src="./assets/img/Depoimento-1.webp" alt="Depoimento 1 Whatsapp">
-                <img src="./assets/img/Depoimento-2.webp" alt="Depoimento 2 Whatsapp">
+                <img src="./assets/img/Depoimento-4.webp" alt="Depoimento 4 Whatsapp" class="lazyload">
+                <img src="./assets/img/Depoimento-5.webp" alt="Depoimento 5 Whatsapp" class="lazyload">
+                <img src="./assets/img/Depoimento-7.webp" alt="Depoimento 7 Whatsapp" class="lazyload">
+                <img src="./assets/img/Depoimento-8.webp" alt="Depoimento 8 Whatsapp" class="lazyload">
+                <img src="./assets/img/Depoimento-1.webp" alt="Depoimento 1 Whatsapp" class="lazyload">
+                <img src="./assets/img/Depoimento-2.webp" alt="Depoimento 2 Whatsapp" class="lazyload">
                 <!-- <img src="./assets/img/Depoimento-9.webp" alt="Depoimento 9 Whatsapp"> -->
                 <!-- cwebp -q 50 Depoiemnto-1.png -o  Depoimento-1.webp
                 cwebp -q 50 Depoimento-2.png -o  Depoimento-2.webp
