--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
         </div>
         <div class="row text-center">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-            <img src="./assets/img/compra-segura.webp" alt="compra segura" class="text-center" style="width: 100%;">
+            <img src="./assets/img/compra-segura.webp" alt="compra segura" class="text-center" style="width: 100%;" class="lazyload" loading="lazy">
           </div>
         </div>
       </div>
@@ -521,8 +521,8 @@
           </div>
           <div class="col-lg-4 col-md-5 col-xs-12">
             <p class="float-right">Designed and Developed by Aquiles Media</p>
-            <img src="assets/img/loja_protegida.webp" alt="loja protegida" style="width: 80%;">
-            <img src="assets/img/bandeiras-cartoes-credito-739px.webp" alt="bandeiras de cartoes" style="width: 80%;" class="lazyload"> 
+            <img src="assets/img/loja_protegida.webp" alt="loja protegida" style="width: 80%;" class="lazyload" loading="lazy">
+            <img src="assets/img/bandeiras-cartoes-credito-739px.webp" alt="bandeiras de cartoes" style="width: 80%;" class="lazyload" loading="lazy"> 
           </div> 
         </div>
       </div>
