--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-xs-12">
-            <img src="./assets/img/combo2.webp" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook">
+            <img src="./assets/img/combo2.webp" style="width: 90%;" alt="Imagem com 4 ebooks e AudioBook" width="" height="">
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 active">
             <div class="table wow" id="active-tb" data-wow-delay="1.2s">
