--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
 
-    <script src="lazysizes.min.js" async>
+    <!-- <script src="lazysizes.min.js" async> -->
 
     </script>
       
