--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Icon -->
     <link rel="stylesheet" href="assets/fonts/line-icons.css">
     <!-- Slicknav -->
-    <link rel="stylesheet" href="assets/css/slicknav.css">
+    <!-- <link rel="stylesheet" href="assets/css/slicknav.css"> -->
     <!-- Owl carousel -->
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.css">
