--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.css">
     
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
     <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
     <!-- Animate -->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -47,11 +47,11 @@
           color: rgb(0, 0, 0);
           transform: translateY(-7px);
         }
-        @keyframes clickit {
+        /* @keyframes clickit {
           0% {opacity: 0}
           80% {opacity: 0}
           100% {opacity: 1}
-        }
+        } */
 
         .text-precos {
           font-weight: bolder;
