--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- Slicknav -->
     <!-- <link rel="stylesheet" href="assets/css/slicknav.css"> -->
     <!-- Owl carousel -->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.css">
+    <!-- <link rel="stylesheet" href="assets/css/owl.carousel.min.css"> -->
+    <!-- <link rel="stylesheet" href="assets/css/owl.theme.css"> -->
     
     <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
-    <link rel="stylesheet" href="assets/css/nivo-lightbox.css">
+    <!-- <link rel="stylesheet" href="assets/css/nivo-lightbox.css"> -->
     <!-- Animate -->
     <link rel="stylesheet" href="assets/css/animate.css">
     <!-- Main Style -->
