--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>Score dos Sonhos</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="preload" href="assets/css/bootstrap.min.css" as="style">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Icon -->
-    <link rel="preload" href="assets/fonts/line-icons.css" as="style">
+    <link rel="stylesheet" href="assets/fonts/line-icons.css">
     <!-- Slicknav -->
     <!-- <link rel="stylesheet" href="assets/css/slicknav.css"> -->
     <!-- Owl carousel -->
@@ -21,11 +21,11 @@
     <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
     <!-- <link rel="stylesheet" href="assets/css/nivo-lightbox.css"> -->
     <!-- Animate -->
-    <link rel="preload" href="assets/css/animate.css" as="style">
+    <link rel="stylesheet" href="assets/css/animate.css">
     <!-- Main Style -->
-    <link rel="preload" href="assets/css/main.css" as="style">
+    <link rel="stylesheet" href="assets/css/main.css">
     <!-- Responsive Style -->
-    <link rel="preload" href="assets/css/responsive.css" as="style">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 
     <link rel="icon" href="./assets/img/SDSICON.png">
 
