--- a/index.html
+++ b/index.html
@@ -539,23 +539,23 @@
    
     
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/js/jquery-min.js "></script>
-    <script src="assets/js/popper.min.js "></script>
-    <script src="assets/js/bootstrap.min.js "></script>
-    <script src="assets/js/owl.carousel.min.js "></script>
-    <script src="assets/js/jquery.mixitup.js "></script>
-    <script src="assets/js/wow.js "></script>
-    <script src="assets/js/jquery.nav.js "></script>
-    <script src="assets/js/scrolling-nav.js "></script>
-    <script src="assets/js/jquery.easing.min.js "></script>
-    <script src="assets/js/jquery.counterup.min.js "></script>  
-    <script src="assets/js/nivo-lightbox.js "></script>     
-    <script src="assets/js/jquery.magnific-popup.min.js "></script>     
-    <script src="assets/js/waypoints.min.js "></script>   
-    <script src="assets/js/jquery.slicknav.js "></script>
-    <script src="assets/js/main.js "></script>
-    <script src="assets/js/form-validator.min.js "></script>
-    <script src="assets/js/contact-form-script.min.js "></script>
+    <script async src="assets/js/jquery-min.js "></script>
+    <script async src="assets/js/popper.min.js "></script>
+    <script async src="assets/js/bootstrap.min.js "></script>
+    <script async src="assets/js/owl.carousel.min.js "></script>
+    <script async src="assets/js/jquery.mixitup.js "></script>
+    <script async src="assets/js/wow.js "></script>
+    <script async src="assets/js/jquery.nav.js "></script>
+    <script async src="assets/js/scrolling-nav.js "></script>
+    <script async src="assets/js/jquery.easing.min.js "></script>
+    <script async src="assets/js/jquery.counterup.min.js "></script>  
+    <script async src="assets/js/nivo-lightbox.js "></script>     
+    <script async src="assets/js/jquery.magnific-popup.min.js "></script>     
+    <script async src="assets/js/waypoints.min.js "></script>   
+    <script async src="assets/js/jquery.slicknav.js "></script>
+    <script async src="assets/js/main.js "></script>
+    <script async src="assets/js/form-validator.min.js "></script>
+    <script async src="assets/js/contact-form-script.min.js "></script>
 
     <!-- <script src="lazysizes.min.js " async> -->
 
