--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <title>Score dos Sonhos</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" disabled>
     <!-- Icon -->
-    <link rel="stylesheet" href="assets/fonts/line-icons.css">
+    <link rel="stylesheet" href="assets/fonts/line-icons.css" disabled>
     <!-- Slicknav -->
     <!-- <link rel="stylesheet" href="assets/css/slicknav.css"> -->
     <!-- Owl carousel -->
@@ -23,13 +23,13 @@
     <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
     <!-- <link rel="stylesheet" href="assets/css/nivo-lightbox.css"> -->
     <!-- Animate -->
-    <link rel="stylesheet" href="assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/animate.css" disabled>
     <!-- Main Style -->
     <link rel="stylesheet" href="assets/css/main.css">
     <!-- Responsive Style -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/responsive.css" disabled>
 
-    <link rel="icon" href="./assets/img/SDSICON.png">
+    <link rel="icon" href="./assets/img/SDSICON.png" disabled>
 
     <style>
         .btn-zap {
