--- a/index.html
+++ b/index.html
@@ -87,12 +87,17 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="contents text-center">
                             <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(0, 255, 195);">os segredos</span> que os bancos estão <span style="color:rgb(0, 255, 195);">escondendo</span> de você, <span style="color:rgb(0, 255, 195);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
+                            <iframe class="lazy" width="100%" height="100%" id="videoframe" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
+  <a href=https://www.youtube.com/embed/TqbTGCxap9E?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
+  <img src=./assets/img/cd.png>
+  <img id='playbutton' src='YOUTUBE_PLAY_BUTTON_IMAGE_URL' style='width: 66px; position: absolute; left: 41.5%;'></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen scrolling="no" loading="lazy"
+                                style="background-color: #000"></iframe>
                             <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
                                 <!-- IFRAME -->
-                                <div class="embed-responsive embed-responsive-16by9">
+                                <!-- <div class="embed-responsive embed-responsive-16by9">
                                     <iframe loading="lazy" class="lazy" title="video explicando a importancia e como o produto pode ajudar a melhorar o score" class="embed-responsive-item video-func" preload="none" src="https://www.youtube.com/embed/TqbTGCxap9E?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1"
                                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
+                                </div> -->
                                 <!-- <div class="elementor-element elementor-element-290077b elementor-aspect-ratio-169 elementor-widget elementor-widget-video" data-id="290077b" data-element_type="widget" data-settings="{&quot;youtube_url&quot;:&quot;https:\/\/youtu.be\/TqbTGCxap9E&quot;,&quot;video_type&quot;:&quot;youtube&quot;,&quot;aspect_ratio&quot;:&quot;169&quot;}" data-widget_type="video.default"><div class="elementor-widget-container"><div class="elementor-wrapper elementor-fit-aspect-ratio elementor-open-inline"><iframe class="elementor-video" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="YouTube video player" width="640" height="360" src="https://www.youtube.com/embed/TqbTGCxap9E?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1" id="widget2"></iframe></div></div></div> -->
 
                                 <h5 lass="wow fadeInUp" style="color: #ffffff;
@@ -557,7 +562,8 @@
     <script async src="assets/js/form-validator.min.js "></script>
     <script async src="assets/js/contact-form-script.min.js "></script>
     
-
+    <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.3.1/dist/lazyload.min.js "></script>
+    <script>var lazyLoadInstance = new LazyLoad();</script>
     <!-- <script src="lazysizes.min.js " async> -->
 
     </script>
