--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <div class="contents text-center">
                             <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(0, 255, 195);">os segredos</span> que os bancos estão <span style="color:rgb(0, 255, 195);">escondendo</span> de você, <span style="color:rgb(0, 255, 195);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
-                            <iframe class="lazy" width="100%" height="100%" id="videoframe" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
+                            <iframe title="Video Sobre o Metodo Score dos Sonhos" lass="lazy " width="100% " height="100% " id="videoframe " srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{background:#000;height:100%}img{position:absolute;width:100%;top:0;bottom:0;margin:auto}</style>
   <a href=https://www.youtube.com/embed/TqbTGCxap9E?controls=0&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fscorealto.org&amp;widgetid=1>
   <img src=./assets/img/cd.webp>
   <img id='playbutton' src='./assets/img/playYT.webp' style='width: 66px; position: absolute; left: 41.5%;'></a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen scrolling="no" loading="lazy"
@@ -519,7 +519,7 @@
         <div class="row ">
           <div class="col-lg-4 col-md-3 col-xs-12 ">
             <div class="footer-logo ">
-              <img src="assets/img/logoNavBar.webp " alt=" " style="width: 50%; height: 50%; ">   
+              <img src="assets/img/logoNavBar.webp " alt=" Logo Score dos Sonhos " style="width: 50%; height: 50%; ">   
               <p style="color: white; ">Copyright 2019 - Aquiles Media® Todos os direitos Reservados.</p>  
               <p style="font-size: 13px; ">ESTE SITE NÃO É do FACEBOOK: Este site não faz parte do site do Facebook ou do Facebook Inc. Além disso, este site NÃO é endossado pelo Facebook de nenhuma maneira. FACEBOOK é uma marca comercial independente da FACEBOOK, Inc. A Aquiles Media é uma empresa com o objetivo de ajudar pessoas a obterem resultados financeiros utilizando o poder da informação e conhecimento. Os depoimentos mostrados são negócios e vão variar com base no seu esforço, no conhecimento que você adquirir.</p>
             </div>
